@@ -17,6 +17,7 @@ Bugs fixed
 ----------
 
 * #7197: LaTeX: platex cause error to build image directive with target url
+* #7223: Sphinx builds has been slower since 2.4.0
 
 Testing
 --------
